added css file, linked html files

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,17 +3,27 @@
         <meta charset="utf-8">
         <title>Friend Finder</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="./assets/css/styles.css"/>
+        <link rel="stylesheet" type="text/css" href="./styles.css"/>
     </head>
     <body>
 
-      
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-7 main">
+              <div class="jumbotron">
+                  <h1 class="display-4 text-center">Which WWE Superstar are you?</h1>
+                  <hr class="my-4">
+                  <p class="text-center">Answer a few questions to find out!</p>
+                  <div class="text-center">
+                    <a class="btn btn-primary btn-lg" href="./survey.html" role="button">Begin</a>                    
+                  </div>
+                  
+                </div>
+          </div>
+        </div>
+      </div>
 
-
-
-
-
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="../data/friends.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+      <script src="../data/friends.js"></script>
     </body>
 </html>
