--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,7 +7,23 @@
     </head>
     <body>
 
-      
+            <div class="container-fluid">
+                    <div class="row">
+                          <div class="col-lg-6 jumbotron">
+                              <h1 class="display-4 text-center">Which WWE Superstar are you?</h1>
+                              <hr class="my-4">
+                              <p class="text-center">Answer a few questions to find out!</p>
+                              <div class="text-center">
+                                <a class="btn btn-primary btn-lg" href="./survey.html" role="button">Begin</a>                    
+                          </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6 links">
+                          <a href="/api/list">API Superstar List</a> | <a href="https://github.com/thnlsn/FriendFinder">GitHub Repo</a>
+                        </div>
+                    </div>
+            </div>
 
 
 
