--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,14 +3,14 @@
         <meta charset="utf-8">
         <title>Survey</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="./styles.css"/>
+        <link rel="stylesheet" type="text/css" href="./css/styles.css"/>
     </head>
     <body>
 
             <div class="container-fluid">
                     <div class="row">
                           <div class="col-lg-6 jumbotron">
-                              <h1 class="display-4 text-center">Which WWE Superstar are you?</h1>
+                              <h1 class="display-4 text-center">SURVEY HTML</h1>
                               <hr class="my-4">
                               <p class="text-center">Answer a few questions to find out!</p>
                               <div class="text-center">
