finished html and base of css

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,29 +7,149 @@
     </head>
     <body>
 
-            <div class="container-fluid">
-                    <div class="row">
-                          <div class="col-lg-6 jumbotron">
-                              <h1 class="display-4 text-center">SURVEY HTML</h1>
-                              <hr class="my-4">
-                              <p class="text-center">Answer a few questions to find out!</p>
-                              <div class="text-center">
-                                <a class="btn btn-primary btn-lg" href="./survey.html" role="button">Begin</a>                    
-                          </div>
-                      </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6 links">
-                          <a href="/api/list">API Superstar List</a> | <a href="https://github.com/thnlsn/FriendFinder">GitHub Repo</a>
-                        </div>
-                    </div>
+    <div class="container">
+
+        <h1>Questions</h1>
+        <hr>
+        <h3>About You (Required)</h3>
+        <form>
+            <div class="form-group">
+                <label for="input-name">Name</label>
+                <input type="name" class="form-control" id="input-name" aria-describedby="name-help" placeholder="Enter name">
             </div>
+            <div class="form-group">
+                <label for="input-photo">Your Photo</label>
+                <input type="photo" class="form-control" id="input-photo" placeholder="Image link">
+            </div>
+            <hr>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 1</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 2</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 3</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 4</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 5</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 6</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 7</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 8</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 9</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <h4><label for="input-photo">Question 10</label></h4>
+                <select class="form-control" id="option-form">
+                    <option>(Please choose an option)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2 (Somewhat Disagree)</option>
+                    <option>3 (Neutral)</option>
+                    <option>4 (Somewhat Agree</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+            <hr>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Allow yourself to be added to the list of possible "friends"</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <hr>
 
 
+        <div class="row">
+            <div class="col-lg-6 links">
+                <a href="/api/list">Friends API</a> | <a href="https://github.com/thnlsn/FriendFinder">GitHub Repo</a>
+            </div>
+        </div>
+    </div>
 
-
-
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="../data/friends.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="../data/friends.js"></script>
     </body>
 </html>
