--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,7 +10,7 @@
       <div class="container-fluid">
         <div class="row">
               <div class="col-lg-6 jumbotron">
-                  <h1 class="display-4 text-center">Which WWE Superstar are you?</h1>
+                  <h1 class="display-4 text-center">Want to know who your perfect friend is?</h1>
                   <hr class="my-4">
                   <p class="text-center">Answer a few questions to find out!</p>
                   <div class="text-center">
