--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
               <div class="col-lg-6 jumbotron">
                   <h1 class="display-4 text-center">Want to know who your perfect friend is?</h1>
@@ -18,11 +18,11 @@
               </div>
           </div>
         </div>
-        <div class="row">
-            <div class="col-lg-6 links">
+
+            <div class="links">
               <a href="/api/list">API Superstar List</a> | <a href="https://github.com/thnlsn/FriendFinder">GitHub Repo</a>
             </div>
-        </div>
+
       </div>
 
       <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
