--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -143,7 +143,7 @@
 
 
         <div class="row">
-            <div class="col-lg-6 links">
+            <div class="col-lg-6">
                 <a href="/api/list">Friends API</a> | <a href="https://github.com/thnlsn/FriendFinder">GitHub Repo</a>
             </div>
         </div>
