--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,120 +15,121 @@
         <form>
             <div class="form-group">
                 <label for="input-name">Name</label>
-                <input type="name" class="form-control" id="input-name" aria-describedby="name-help" placeholder="Enter name">
+                <input type="text" class="form-control" id="input-name" aria-describedby="name-help" placeholder="Enter name">
             </div>
             <div class="form-group">
-                <label for="input-photo">Your Photo</label>
-                <input type="photo" class="form-control" id="input-photo" placeholder="Image link">
+                <label for="input-pic">Photo</label>
+                <input type="text" class="form-control" id="input-pic" aria-describedby="picture-help" placeholder="Enter picture">
             </div>
+
             <hr>
             <div class="form-group">
-                <h4><label for="input-photo">Question 1</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 1</label></h4>
+                <select class="form-control" id="q1">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 2</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 2</label></h4>
+                <select class="form-control" id="q2">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 3</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 3</label></h4>
+                <select class="form-control" id="q3">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 4</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 4</label></h4>
+                <select class="form-control" id="q4">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 5</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 5</label></h4>
+                <select class="form-control" id="q5">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 6</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 6</label></h4>
+                <select class="form-control" id="q6">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 7</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 7</label></h4>
+                <select class="form-control" id="q7">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 8</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 8</label></h4>
+                <select class="form-control" id="q8">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 9</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 9</label></h4>
+                <select class="form-control" id="q9">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
             <div class="form-group">
-                <h4><label for="input-photo">Question 10</label></h4>
-                <select class="form-control" id="option-form">
-                    <option>(Please choose an option)</option>
+                <h4><label for="question-title">Question 10</label></h4>
+                <select class="form-control" id="q10">
+                    <option></option>
                     <option>1 (Strongly Disagree)</option>
                     <option>2 (Somewhat Disagree)</option>
                     <option>3 (Neutral)</option>
-                    <option>4 (Somewhat Agree</option>
+                    <option>4 (Somewhat Agree)</option>
                     <option>5 (Strongly Agree)</option>
                 </select>
             </div>
@@ -137,19 +138,18 @@
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                 <label class="form-check-label" for="exampleCheck1">Allow yourself to be added to the list of possible "friends"</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" id="submit-button">Submit</button>
         </form>
         <hr>
 
-
         <div class="row">
             <div class="col-lg-6">
-                <a href="/api/list">Friends API</a> | <a href="https://github.com/thnlsn/FriendFinder">GitHub Repo</a>
+                <a href="/api/friends">Friends API</a> | <a href="https://github.com/thnlsn/FriendFinder">GitHub Repo</a>
             </div>
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="../data/friends.js"></script>
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="./survey.js"></script>
     </body>
 </html>
